section4/manifest/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sample-daemonset
spec:
  selector:
    matchLabels:
      name: sample-daemonset
  template:
    metadata:
      labels:
        name: sample-daemonset
    spec:
      serviceAccount: admin
      containers:
        - image: kube-sample-app:1.0
          name: api-container
          command: ["python", "app.py"]
