section4/manifest/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: api-container
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5000
