section4/manifest/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
spec:
  type: LoadBalancer
  selector:
    app: api-container
  ports:
    - port: 5555
      targetPort: 5000
      nodePort: 30000
      protocol: TCP
