section4/manifest/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: api-container
  ports:
    - port: 5555
      targetPort: 5000
      nodePort: 30000
