section4/manifest/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - port: 5555
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - port: 5555
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-svc
                port:
                  number: 5555
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-svc
                port:
                  number: 5555
